changed img urls to work

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-sm-10 col-xs-10 col-md-8 col-lg-7 text-center">
-                <img id="logo" class="img-fluid mt-4 mb-4 border rounded-circle" src="https://drive.google.com/uc?export=view&id=1w5hE5QwDS-uxajuOSZMcGmX-lTYrhFs9">
+                <img id="logo" class="img-fluid mt-4 mb-4 border rounded-circle" src="https://drive.google.com/thumbnail?id=1w5hE5QwDS-uxajuOSZMcGmX-lTYrhFs9&sz=w1000">
             </div>
         </div>
     </div>
@@ -37,23 +37,23 @@
                 <div id="carouselExampleAutoplaying" class="carousel slide align-items-center" data-bs-ride="carousel">
                     <div class="carousel-inner ">
                         <div class="carousel-item active text-center">
-                            <img src="https://drive.google.com/uc?export=view&id=1g5r6XPyCr3OOq3lh06XzsucZWi5JF7bv" class="object-fit-contain border rounded img-fluid carimg "
+                            <img src="https://drive.google.com/thumbnail?id=1g5r6XPyCr3OOq3lh06XzsucZWi5JF7bv&sz=w1000" class="object-fit-contain border rounded img-fluid carimg "
                                 alt="...">
                         </div>
                         <div class="carousel-item text-center">
-                            <img src="https://drive.google.com/uc?export=view&id=1bQy_krlJYBvQDPvmJwGl7TbpcMFAFq0J"
+                            <img src="https://drive.google.com/thumbnail?id=1bQy_krlJYBvQDPvmJwGl7TbpcMFAFq0J&sz=w1000"
                                 class="object-fit-contain border rounded img-fluid carimg " alt="...">
                         </div>
                         <div class="carousel-item text-center">
-                            <img src="https://drive.google.com/uc?export=view&id=14sE92HwsrAZrN_8-VPDsZOLL_aGusgZT"
+                            <img src="https://drive.google.com/thumbnail?id=14sE92HwsrAZrN_8-VPDsZOLL_aGusgZT&sz=w1000"
                                 class="object-fit-contain border rounded img-fluid carimg" alt="...">
                         </div>
                         <div class="carousel-item text-center">
-                            <img src="https://drive.google.com/uc?export=view&id=1JM0IkZXZQ8DxGWW7oUNfh7L9j1C8A5mL" class="object-fit-contain border rounded img-fluid carimg"
+                            <img src="https://drive.google.com/thumbnail?id=1JM0IkZXZQ8DxGWW7oUNfh7L9j1C8A5mL&sz=w1000" class="object-fit-contain border rounded img-fluid carimg"
                                 alt="...">
                         </div>
                         <div class="carousel-item text-center">
-                            <img src="https://drive.google.com/uc?export=view&id=1r7-KH7wEVLIsIp0fWrwJojdQGKZiV_9_"
+                            <img src="https://drive.google.com/thumbnail?id=1r7-KH7wEVLIsIp0fWrwJojdQGKZiV_9_&sz=w1000"
                                 class="object-fit-contain border rounded img-fluid carimg" alt="...">
                         </div>
                     </div>
