edited p-tag about location

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                         <div class="accordion-body text-center">
-                            <p>Approximately here, nestled between Urbandale, Johnston, and Grimes.</p>
+                            <p>Approximately here.  Zoom out and move it around for some perspective!</p>
                             <iframe id="map"
                                 src="https://www.google.com/maps/d/embed?mid=1yXV6dHKvg5sOdLwVt84N3ard7ptn-EY&ehbc=2E312F&noprof=1"
                                 width="640" height="480"></iframe>
